# leviathan

./: Cargo.toml  README.md  linalg.todo
src/: lib.rs
src/array/: container.rs  index.rs  mod.rs  storage.rs
src/geometry/: mod.rs  primitive.rs  quickhull.rs  shape.rs
src/geometry/algorithm/: mod.rs
src/geometry/algorithm/collide/: gjk.rs  mod.rs
src/geometry/collide/: gjk.rs
src/linalg/: matrix.rs  mod.rs  traits.rs  vector.rs
src/linalg/algorithm/: mod.rs
src/linalg/algorithm/optimize/: simplex.rs
src/linalg/lp/: mod.rs  simplex.rs
src/linalg/solve/: gaussian.rs
src/matrix/: dense.rs  dynamic.rs  mod.rs  traits.rs
src/num/: traits.rs
src/typehack/: data.rs  dim.rs  mod.rs  prelude.rs  tvec.rs  void.rs
src/typehack/binary/: arith.rs  mod.rs
src/typehack/peano/: arith.rs  mod.rs
src/vector/: dense.rs  mod.rs  traits.rs
tests/: binary.rs  compile-fail.rs  matrix.rs  orthodox.rs  peano.rs  storage.rs  vector.rs
tests/array/: container.rs  mod.rs  storage.rs
tests/compile-fail/: peano-sub-undefined.rs
tests/linalg/: matrix.rs  vector.rs
tests/linalg/matrix/: dense.rs
tests/linalg/vector/: dense.rs  mod.rs
tests/typehack/: binary.rs  mod.rs  peano.rs
